fix sonnar issues