@@ -61,6 +61,10 @@
             <version>0.0.8</version>
             <configuration>
                 <mainClass>drinkshop.ui.DrinkShopApp</mainClass>
+                <options>
+                    <option>--enable-native-access=javafx.graphics</option>
+                    <option>--sun-misc-unsafe-memory-access=allow</option>
+                </options>
             </configuration>
         </plugin>
 
@@ -68,6 +72,12 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-failsafe-plugin</artifactId>
             <version>2.22.1</version>
+        </plugin>
+
+        <plugin>
+            <groupId>org.sonarsource.scanner.maven</groupId>
+            <artifactId>sonar-maven-plugin</artifactId>
+            <version>3.11.0.3922</version>
         </plugin>
 
     </plugins>
